--- a/css/index.css
+++ b/css/index.css
@@ -153,12 +153,12 @@ h3{
 }
 .right-side .box-winner p{
     width: 100%;
-    padding: 20px;
+    padding: 8px;
     color: rgba(2, 18, 43, 0.801);
     display: flex;
     justify-content: center;
     align-items: center;
-    height: calc(330px/3);
+    height: calc(330px/4);
 }
 .gaming .right-side .box-winner p:nth-child(1){
     font-size: 1.6em;
@@ -251,6 +251,13 @@ h3{
     width: 400px;
     padding: 10px;
 }
+.event-click .bloco-signup .msg-box{
+    text-align: center;
+    padding: 5px;
+    font-size: 1em;
+    font-weight: bold;
+}
+
 .event-click .bloco-signup input, .event-click .bloco-signup button{
     width: 100%;
     padding: 15px;
@@ -266,4 +273,49 @@ h3{
     background-color: rgba(4, 25, 56, 0.801);
     border: 1px solid black;
     color: white;
+}
+
+.loader{
+    margin: 0 auto;
+    height: 80px;
+    width: 80px;
+    border-radius: 100px;
+    border: 1px solid black;
+    display: flex;
+    background: linear-gradient(rgba(67, 69, 224, 0.947),rgba(67, 69, 224, 0.547),rgba(67, 69, 224, 0.747));
+    animation: rotate 1s infinite;
+}
+.loader-corpo{
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    animation: loop 1s infinite;
+}
+.pop-cicle{
+    height: 5px;
+    width: 40px;
+    border: 2px solid white;
+}
+.sorvete{
+    width: 30px;
+    height: 30px;
+    border-radius: 5px;
+    border: 2px solid white;
+}
+@keyframes loop{
+    0%,100%{
+        transform: rotateZ(0);
+    }
+    50%{
+        transform: rotateZ(360deg);
+    }
+}
+@keyframes rotate{
+    0%{
+        transform: rotateZ(0);
+    }
+    100%{
+        transform: rotateZ(360deg);
+    }
 }
